<resources>
    <string name="app_name">UniCrow</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="seek_atm">Seek ATM</string>
    <string name="post_work">Post Work</string>
    <string name="notifications">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="useekr_transact">USeekr Transact</string>
    <string name="log_in">Log in</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="transaction_title">Transaction Title</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="details">Details</string>
    <string name="home">Home</string>
    <string name="find_work">Find Work</string>
    <string name="transactions">Transactions</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="next">Next</string>
    <string name="basic_info">Basic Info</string>
    <string name="account_number">Account Number</string>
    <string name="task_title">Task Title</string>
    <string name="add_task">Add Task</string>
    <string name="milestones">Milestones</string>
    <string name="amount">Amount</string>
    <string name="done">Done</string>
    <string name="payment_details">Payment Details</string>
    <string name="proceed">Proceed</string>
    <string name="confirm_create_transaction">Create Transaction?</string>
    <string name="completed">Completed</string>
    <string name="transaction">Transaction</string>
    <string name="mark_as_completed">Mark as Completed</string>
    <string name="pay_service_transactions_fast_and_secured">pay service transactions fast and secured.</string>
    <string name="under_construction">Under Construction</string>
</resources>
