<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_useekr_transact"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/useekr_transact" />
        <item
            android:id="@+id/nav_seek_work"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/find_work" />
        <item
            android:id="@+id/nav_seek_atm"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/seek_atm" />
        <item
            android:id="@+id/nav_post_work"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/post_work" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/my_profile" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
