<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_transaction_create_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transaction_title"
            android:inputType="textPersonName"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_transaction_create_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transaction_details"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:lines="4"
            android:maxEms="1000"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/milestones"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/task_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:descendantFocusability="afterDescendants"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:gravity="center_vertical"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/add_task"/>

            <ImageButton
                android:id="@+id/add_task"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_add_circle_outline_black_24px"
                android:layout_gravity="end"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>